--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,11 +1,21 @@
 :root {
     font-size: 62.5%;
 
-    --ff-primary: ;
-    --text-color: ;
+    --ff-primary: "Roboto";
+    --ff-secondary: "Roboto Mono";
 
-    --hue: ;
-    --primary-color: ;
+    --hue: 193;
+    --border-color: hsla(var(--hue), 31%, 42%, 1);
+    --row-primary-color: hsla(var(--hue), 61%, 6%, 0.5);
+    --row-secondary-color: hsla(var(--hue), 65%, 7%, 1);
+    --table-header: hsla(var(--hue), 72%, 13%, 1);
+    --btn-color:hsla(195, 91%, 25%, 1);
+    --btn-hover:hsla(0, 0%, 100%, 1);
+    --btn-remove-color: hsla(355, 91%, 66%, 1);
+
+    --txt-color:hsla(240, 9%, 89%, 1);
+    --txt-placeholder:hsla(240, 6%, 51%, 1);
+    --bg-color:hsla(0, 0%, 0%, 1);
 }
 
 * {
@@ -14,25 +24,76 @@
     border: none;
     list-style: none;
     box-sizing: border-box;
+
+    font-family: var(--ff-primary), sans-serif;
+    font-weight: bold;
 }
 
 body{
-    background-color: rgb(141, 29, 215);
+    background-color: rgb(8, 5, 26);
 }
 
 header{
     display: flex;
-    img{
-        height: 3rem;
-    }
+    gap: 18rem;
+}
+
+table{
+    color: white;
 }
 
 .search{
     display: flex;
+    align-items: center;
+
+    width: 63.2rem;
+    height: 4.8rem;
+
+
+    gap: 0.6rem;
+    input{
+        font-weight: 400;
+        width: 100%;
+        padding: 1.6rem;
+        border-radius: 0.5rem;
+
+        background-color: var(--row-secondary-color);
+        color: var(--txt-placeholder);
+    }
+    button{
+        display: flex;
+        align-items: center;
+
+        gap: 0.8rem;
+        padding: 1.2rem 3.2rem;
+        border-radius: 0.5rem;
+
+        color: var(--txt-color);
+        background-color: var(--btn-color);
+        &:hover{
+            background-color: var(--btn-hover);
+            color: var(--btn-color);
+            img{
+
+            }
+        }
+    }
 }
 
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border-width: 0;
+  }
+
 #app{
-    padding: 11.5rem 16rem;
+    padding: 11rem;
     max-width: 1200px;
     margin: 0 auto;
 }
