--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,26 @@ header {
 }
 
 table {
+  font-weight: 700;
+  font-size: 1.6rem;
+  width: 100%;
   color: white;
+  margin-top: 5rem;
+  border-collapse: collapse;
+}
+table thead {
+  background-color: var(--table-header);
+}
+table thead th:first-child {
+  border-top-left-radius: 1rem;
+  width: 40rem;
+}
+table thead th:last-child {
+  border-top-right-radius: 1rem;
+}
+table th {
+  text-align: left;
+  padding: 1.6rem 2.4rem 1.6rem 4rem;
 }
 
 .search {
@@ -66,6 +85,10 @@ table {
   background-color: var(--btn-hover);
   color: var(--btn-color);
 }
+.search button:hover svg path {
+  fill: var(--btn-color);
+}
+
 .sr-only {
   position: absolute;
   width: 1px;
@@ -79,7 +102,7 @@ table {
 }
 
 #app {
-  padding: 11rem;
+  padding: 11.5rem 16rem 11.6rem;
   max-width: 1200px;
   margin: 0 auto;
 }/*# sourceMappingURL=styles.css.map */
