--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -39,7 +39,32 @@ header{
 }
 
 table{
+    font-weight: 700;
+    font-size:1.6rem;
+    width: 100%;
     color: white;
+    margin-top: 5rem;
+
+    border-collapse: collapse;
+    thead{
+        background-color: var(--table-header);
+        th{
+            &:first-child{
+                border-top-left-radius: 1rem;
+                width: 40rem;
+            }
+            &:last-child{
+                border-top-right-radius: 1rem;
+            }
+        }
+    }
+    th{
+        text-align: left;
+        padding: 1.6rem 2.4rem 1.6rem 4rem;
+        // &:first-child{
+        //     width: 100%;
+        // }
+    }
 }
 
 .search{
@@ -48,7 +73,6 @@ table{
 
     width: 63.2rem;
     height: 4.8rem;
-
 
     gap: 0.6rem;
     input{
@@ -73,8 +97,10 @@ table{
         &:hover{
             background-color: var(--btn-hover);
             color: var(--btn-color);
-            img{
-
+            svg {
+                path{
+                    fill: var(--btn-color);
+                }
             }
         }
     }
@@ -93,7 +119,7 @@ table{
   }
 
 #app{
-    padding: 11rem;
+    padding: 11.5rem 16rem 11.6rem;
     max-width: 1200px;
     margin: 0 auto;
 }
