--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -15,6 +15,7 @@
 
     --txt-color:hsla(240, 9%, 89%, 1);
     --txt-placeholder:hsla(240, 6%, 51%, 1);
+    --txt-color-nofav: hsl(189, 4%, 32%);
     --bg-color:hsla(0, 0%, 0%, 1);
 }
 
@@ -24,6 +25,7 @@
     border: none;
     list-style: none;
     box-sizing: border-box;
+    text-decoration: none;
 
     font-family: var(--ff-primary), sans-serif;
     font-weight: bold;
@@ -39,19 +41,16 @@ header{
 }
 
 table{
-    font-weight: 700;
-    font-size:1.6rem;
     width: 100%;
-    color: white;
-    margin-top: 5rem;
-
-    border-collapse: collapse;
+    border-spacing: 0;
     thead{
+        position: sticky;
+        top: 0;
         background-color: var(--table-header);
         th{
             &:first-child{
                 border-top-left-radius: 1rem;
-                width: 40rem;
+                width: 36rem;
             }
             &:last-child{
                 border-top-right-radius: 1rem;
@@ -61,9 +60,44 @@ table{
     th{
         text-align: left;
         padding: 1.6rem 2.4rem 1.6rem 4rem;
-        // &:first-child{
-        //     width: 100%;
-        // }
+    }
+    td{
+        padding: 2.4rem 2.4rem 2.4rem 4rem;
+
+    }
+    tr{
+       &:nth-child(even){
+        background: var(--row-secondary-color);
+
+        border-top: 2px solid red;
+        border-bottom: 2px solid red;
+       }
+       &:nth-child(odd){
+        background: var(--row-primary-color);
+       }
+    }
+    button{
+        cursor: pointer;
+        font-size: 2rem;
+        font-weight: bold;
+        background: transparent;
+        color: var(--btn-remove-color);
+    }
+}
+
+a{
+    color: white;
+}
+
+td.user{
+    display: flex;
+    align-items: center;
+    gap: 1.6rem;
+    img{
+        width: 5rem;
+        height: 5rem;
+        object-fit: cover;
+        border-radius: 50%;
     }
 }
 
@@ -116,7 +150,56 @@ table{
     clip: rect(0, 0, 0, 0);
     white-space: nowrap;
     border-width: 0;
-  }
+}
+
+.table{
+    font-weight: 700;
+    font-size:1.6rem;
+    width: 100%;
+    color: white;
+    margin-top: 5rem;
+    border: 2px solid var(--border-color);
+    border-radius: 1.2rem;
+    max-height: 32rem;
+    overflow: hidden;
+    overflow-y: overlay;
+}
+
+.table::-webkit-scrollbar {
+    width: 2.2rem;
+}
+
+.table::-webkit-scrollbar-thumb {
+    background-color: var(--border-color);
+    border-radius: 1rem;
+
+    border: .8rem solid rgba(0, 0, 0, 0);
+    background-clip: padding-box;
+}
+
+.no-favs{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 32rem;
+    background: var(--row-secondary-color);
+    border-radius:0 0 1.2rem 1.2rem;
+    gap: 6rem;
+    h2{
+        font-family: var(--ff-secondary);
+        font-size: 4rem;
+        font-weight: bold;
+        color: var(--txt-color-nofav);
+    }
+    img{
+        width: 13rem;
+        height: 13rem;
+    }
+}
+
+.hide {
+    display: none;
+}
 
 #app{
     padding: 11.5rem 16rem 11.6rem;
